; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_i2s.c_gpio_matrix_out_check.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_i2s.c_gpio_matrix_out_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GPIO_PIN_MUX_REG = common dso_local global i32* null, align 8
@PIN_FUNC_GPIO = common dso_local global i32 0, align 4
@GPIO_MODE_DEF_OUTPUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, i32)* @gpio_matrix_out_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gpio_matrix_out_check(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp ne i32 %9, -1
  br i1 %10, label %11, label %27

11:                                               ; preds = %4
  %12 = load i32*, i32** @GPIO_PIN_MUX_REG, align 8
  %13 = load i32, i32* %5, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i32, i32* %12, i64 %14
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @PIN_FUNC_GPIO, align 4
  %18 = call i32 @PIN_FUNC_SELECT(i32 %16, i32 %17)
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* @GPIO_MODE_DEF_OUTPUT, align 4
  %21 = call i32 @gpio_set_direction(i32 %19, i32 %20)
  %22 = load i32, i32* %5, align 4
  %23 = load i32, i32* %6, align 4
  %24 = load i32, i32* %7, align 4
  %25 = load i32, i32* %8, align 4
  %26 = call i32 @gpio_matrix_out(i32 %22, i32 %23, i32 %24, i32 %25)
  br label %27

27:                                               ; preds = %11, %4
  ret void
}

declare dso_local i32 @PIN_FUNC_SELECT(i32, i32) #1

declare dso_local i32 @gpio_set_direction(i32, i32) #1

declare dso_local i32 @gpio_matrix_out(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
